
5.4 [https://trac.cyberduck.io/milestone/5.4
- [Feature] Search files fast without recursively listing directories (Dropbox)
- [Feature] Search files fast without recursively listing directories (Google Drive)
- [Feature] Add "Open single connection" option for file transfers
- [Bugfix] Failure enabling download distribution (CloudFront) (#9870)

5.3.9 [https://trac.cyberduck.io/milestone/5.3.9
- [Bugfix] Failure dragging files to browser for upload (Mac) (#9860)

5.3.8 [https://trac.cyberduck.io/milestone/5.3.8
- [Bugfix] NTLM authentication failure for uploads (Sharepoint) (#9855)
- [Bugfix] Selected client certificate cleared from bookmark after opening connection (#9842)

5.3.7 [https://trac.cyberduck.io/milestone/5.3.7
- [Bugfix] Include "Shared with me" files (Google Drive)
- [Bugfix] Unable to add new item to metadata (S3) (#9844)
- [Bugfix] Crash in periodic background update check (#9845)

5.3.6 [https://trac.cyberduck.io/milestone/5.3.6
- [Bugfix] Crash for connections requiring TLS connection handshake (Windows CLI)

5.3.5 [https://trac.cyberduck.io/milestone/5.3.5
- [Bugfix] Freeze of browser after idle timeout (#9829)
- [Bugfix] Crash for connections requiring TLS connection handshake (Windows Store)

5.3.4 [https://trac.cyberduck.io/milestone/5.3.4
- [Bugfix] Error duplicating folders (FTP) (#9818)
- [Bugfix] Cannot read distribution details (CloudFront) (#9823)
- [Bugfix] Failure setting attributes for uploaded files with temporary filename option enabled (#9819)

5.3.3 [https://trac.cyberduck.io/milestone/5.3.3
- [Bugfix] Downloads fail with exception after completion (OpenStack Swift) (#9814)

5.3.2 [https://trac.cyberduck.io/milestone/5.3.2
- [Bugfix] Synchronize transfers fail with exception
- [Bugfix] Repeat transfer failures due to HTTP request timeout (Backblaze B2)

5.3.1 [https://trac.cyberduck.io/milestone/5.3.1
- [Feature] Availability in Windows App Store

5.3 [https://trac.cyberduck.io/milestone/5.3]