@@ -63,9 +63,14 @@
     <li>[Feature] Search files fast without recursively listing directories (Dropbox)</li>
     <li>[Feature] Search files fast without recursively listing directories (Google Drive)</li>
     <li>[Feature] Add "Open single connection" option for file transfers</li>
+    <li></li>
     <li>[Bugfix] Failure enabling download distribution (CloudFront) (<a
             href="https://trac.cyberduck.io/ticket/9870">#9870</a>)
     </li>
+    <li>[Bugfix] Authentication failure when using PAM (iRODS) (<a
+            href="https://trac.cyberduck.io/ticket/9872">#9872</a>)
+    </li>
+    <li>[Bugfix] Increasing memory usage when browsing folders</li>
 </ul>
 
 <p>
