@@ -11,6 +11,8 @@ https://cyberduck.io/
 - [Feature] Search files fast without recursively listing directories (Google Drive)
 - [Feature] Add "Open single connection" option for file transfers
 - [Bugfix] Failure enabling download distribution (CloudFront) (#9870)
+- [Bugfix] Authentication failure when using PAM (iRODS) (#9872)
+- [Bugfix] Increasing memory usage when browsing folders
 
 5.3.9 [https://trac.cyberduck.io/milestone/5.3.9
 - [Bugfix] Failure dragging files to browser for upload (Mac) (#9860)
